<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vinaymaneti.coderschooltodolistapp.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/viewBackground"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/login_screen"
            android:textColor="@color/icons"
            android:textSize="24sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/TextInputLayout"
            android:layout_below="@id/viewBackground"
            app:errorTextAppearance="@style/error_appearance">

            <EditText
                android:id="@+id/inputEmail"
                style="@style/EditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/TextInputLayout"
            android:layout_below="@id/emailInputLayout"
            app:errorTextAppearance="@style/error_appearance">

            <EditText
                android:id="@+id/inputPassword"
                style="@style/EditText"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordInputLayout"
            android:layout_margin="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/login_button"
            android:textColor="@color/icons"
            android:textSize="18dp"/>


        <TextView
            android:id="@+id/linkSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_margin="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/no_account_yet_create_one"
            android:textSize="18dip"/>
    </RelativeLayout>

</ScrollView>

